<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_ra"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.MainActivity">

    <EditText
        android:id="@+id/fragment_reg_etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_username" />

    <EditText
        android:id="@+id/fragment_reg_etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_reg_etUsername"
        android:hint="@string/edittext_login" />

    <EditText
        android:id="@+id/fragment_reg_etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_reg_etLogin"
        android:hint="@string/edittext_password"
        android:password="true" />

    <Button
        android:id="@+id/fragment_reg_bReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reg"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
