<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait">

    <TextView
        android:id="@+id/tv_dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_name" />

    <Button
        android:id="@+id/b_back"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/button_text"/>

    <Button
        android:id="@+id/b_send"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_send"/>

    <ListView
        android:id="@+id/lv_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_back"
        android:layout_above="@id/b_send"/>

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/et_message_send"/>

</RelativeLayout>